# PixelFlow

./: .gitignore  CMakeLists.txt  Makefile  PixelNote_FY2024.ipynb  README.md  init.sh  project.sh  run.sh
config/: controlDict.txt
doc/: Guides.html  Guides.md
doc/test-case/cylinder-2d/: info.md
example/test2d/logs/: runlog_2024.01.01-13.17.31.txt
scripts/: build2d.sh  build3d.sh  buildAll.sh  compile.sh  control.sh  project.sh  quit.sh  run.sh
scripts/SQUID/: compile.sh  qrun_cpu.sh  qrun_gpu.sh
scripts/etc/: logo.sh
src/: global.mod  ibm_2d.f90  ibm_2d_acc_gpu.f90  ibm_2d_backstep_acc_gpu.f90  ibm_2d_backstep_omp_cpu.f90  ibm_2d_drag.f90  ibm_2d_drag_acc_gpu.f90  ibm_2d_drag_omp_cpu.f90  ibm_2d_drag_wall.f90  ibm_2d_omp_cpu.f90  ibm_2d_uniform_acc_gpu.f90  ibm_2d_uniform_omp_cpu.f90  ibm_3d.f90  ibm_3d_acc_gpu.f90  ibm_3d_air_condition.f90  ibm_3d_air_condition_acc_gpu.f90  ibm_3d_omp_cpu.f90
src/beta/: scalar_transport.f90  solve_matrix.f90
src/dev/: ibm_2d_uniform_matrix_x_cpu.f90  ibm_2d_uniform_matrix_x_omp_cpu.f90  ibm_2d_uniform_moving_acc_gpu.f90  ibm_2d_uniform_moving_omp_cpu.f90  ibm_2d_uniform_omp_cpu_withoutError.f90  ibm_3d_uniform_acc_gpu_dev.f90  mainFileLists.txt
src/lib/: CMakeLists.txt  global.f90  libFileLists.txt  output.f90
src/oacc_parallel/: CMakeLists.txt  ibm_2d_backstep_acc_gpu.f90  ibm_2d_drag_acc_gpu.f90  ibm_2d_uniform_acc_gpu.f90  ibm_3d_air_condition_acc_gpu.f90  ibm_3d_uniform_acc_gpu.f90  mainFileLists.txt
src/oacc_parallel/lib/: CMakeLists.txt  global.f90
src/omp_parallel/: CMakeLists.txt  ibm_2d_backstep_omp_cpu.f90  ibm_2d_drag_omp_cpu.f90  ibm_2d_uniform_omp_cpu.f90  ibm_3d_air_condition_omp_cpu.f90  ibm_3d_uniform_omp_cpu.f90  mainFileLists.txt
src/omp_parallel/lib/: CMakeLists.txt  MatrixSolverX.f90  global.f90  grid.f90  output.f90  utils.f90
template/: Makefile
template/config/: controlDict.txt  omp_config.conf
template/data/: .porosity
test/: init.sh  run.sh
test/config/: controlDict.txt
test/data/: circle.csv
test/scripts/: build2d.sh  test2d.sh  test3d.sh
test/scripts/SQUID/: qcompile.sh  qrun.sh  qrun_cpu.sh  qrun_gpu.sh  qrun_vec.sh
test/sphere/: run.sh
test/sphere/config/: controlDict.txt
test/sphere/data/: sphere.csv
test/sphere/scripts/: build3d.sh  cleanAll.sh
test/sphere/src/: ibm_3d.f90
test/sphere/tool/: stl2poro.py
test/src/: ibm_2d.f90  ibm_3d.f90
tool/cylinder/: make_porosity_2d_cylinder.py
tool/stl2poro/: dragon.stl  sphere.stl  stl2poro.py
tool/viewer/: porosity_viewer.py
tool/voxel2poro/: make_bmp_sample.py  voxel2poro.py
tools/backstep/: backstep.py  output_porosity.py
tools/boundary-layer/: boundary-layer.py
tools/channel/: channel.py  channel_thin.py
tools/cylinder/: make_porosity_2d_cylinder.py
tools/output/: output_porosity.py
tools/stl2poro/: stl2poro.py
tools/viewer/: porosity_viewer.py
tools/voxel2poro/: make_bmp_sample.py  voxel2poro.py
